--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-graph-vis": "^1.0.7",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "recoil": "^0.7.6",
