--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,10 @@
 
 .env
 /ml/scraper/*.csv
+/ml/scraper/*.json
 /ml/scraper/.ipynb_checkpoints
+/ml/scraper/*.joblib
+/ml/scraper/*.pkl
 
 # debug
 npm-debug.log*
